--- a/client/src/components/ProfileFeed/ProfileFeed.css
+++ b/client/src/components/ProfileFeed/ProfileFeed.css
@@ -40,3 +40,9 @@
   color: white;
   padding: 10px;
 }
+
+@media only screen and (max-width: 1000px) {
+  .profile-post-con {
+    width: 40%;
+  }
+}
